crates/jolt_java_syntax/tests/snapshots/corpus__style__declarations__formatter_ignore_constructor_body.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class Example {
Example() {
  // @formatter:off
  this( 1,2 );
  int raw=1+2;
  // @formatter:on
int after=3;
}
Example(int a,int b){}
Example(String name) {
  // @formatter:off
  this( name,0 );
  // trailing comment owned by the unterminated region
}
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "Example" @ 6..13 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 14..15
        ClassBodyMemberList
          ConstructorDeclaration
            Identifier "Example" @ 16..23 leading=[Newline "\n"]
            LParen "(" @ 23..24
            RParen ")" @ 24..25 trailing=[Whitespace " "]
            ConstructorBody
              LBrace "{" @ 26..27
              ConstructorBodyEntryList
                ConstructorInvocation
                  ThisKw "this" @ 50..54 leading=[Newline "\n", Whitespace "  ", LineComment "// @formatter:off", Newline "\n", Whitespace "  "]
                  ArgumentList
                    LParen "(" @ 54..55 trailing=[Whitespace " "]
                    ExpressionList
                      LiteralExpression
                        IntegerLiteral "1" @ 56..57
                      Comma "," @ 57..58
                      LiteralExpression
                        IntegerLiteral "2" @ 58..59 trailing=[Whitespace " "]
                    RParen ")" @ 60..61
                  Semicolon ";" @ 61..62
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 65..68 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "raw" @ 69..72
                        Assign "=" @ 72..73
                        VariableInitializer
                          BinaryExpression
                            LiteralExpression
                              IntegerLiteral "1" @ 73..74
                            Plus "+" @ 74..75
                            LiteralExpression
                              IntegerLiteral "2" @ 75..76
                  Semicolon ";" @ 76..77
                BlockStatement
                  LocalVariableDeclaration
                    ParameterModifierList
                    PrimitiveType
                      AnnotationList
                      IntKw "int" @ 97..100 leading=[Newline "\n", Whitespace "  ", LineComment "// @formatter:on", Newline "\n"] trailing=[Whitespace " "]
                    VariableDeclaratorList
                      VariableDeclarator
                        Identifier "after" @ 101..106
                        Assign "=" @ 106..107
                        VariableInitializer
                          LiteralExpression
                            IntegerLiteral "3" @ 107..108
                  Semicolon ";" @ 108..109
              RBrace "}" @ 110..111 leading=[Newline "\n"]
          ConstructorDeclaration
            Identifier "Example" @ 112..119 leading=[Newline "\n"]
            LParen "(" @ 119..120
            FormalParameterList
              FormalParameter
                ParameterModifierList
                PrimitiveType
                  AnnotationList
                  IntKw "int" @ 120..123 trailing=[Whitespace " "]
                AnnotationList
                Identifier "a" @ 124..125
              Comma "," @ 125..126
              FormalParameter
                ParameterModifierList
                PrimitiveType
                  AnnotationList
                  IntKw "int" @ 126..129 trailing=[Whitespace " "]
                AnnotationList
                Identifier "b" @ 130..131
            RParen ")" @ 131..132
            ConstructorBody
              LBrace "{" @ 132..133
              ConstructorBodyEntryList
              RBrace "}" @ 133..134
          ConstructorDeclaration
            Identifier "Example" @ 135..142 leading=[Newline "\n"]
            LParen "(" @ 142..143
            FormalParameterList
              FormalParameter
                ParameterModifierList
                ClassType
                  ClassTypeSegmentList
                    ClassTypeSegmentNode
                      AnnotationList
                      Name
                        Identifier "String" @ 143..149 trailing=[Whitespace " "]
                AnnotationList
                Identifier "name" @ 150..154
            RParen ")" @ 154..155 trailing=[Whitespace " "]
            ConstructorBody
              LBrace "{" @ 156..157
              ConstructorBodyEntryList
                ConstructorInvocation
                  ThisKw "this" @ 180..184 leading=[Newline "\n", Whitespace "  ", LineComment "// @formatter:off", Newline "\n", Whitespace "  "]
                  ArgumentList
                    LParen "(" @ 184..185 trailing=[Whitespace " "]
                    ExpressionList
                      NameExpression
                        Identifier "name" @ 186..190
                      Comma "," @ 190..191
                      LiteralExpression
                        IntegerLiteral "0" @ 191..192 trailing=[Whitespace " "]
                    RParen ")" @ 193..194
                  Semicolon ";" @ 194..195
              RBrace "}" @ 251..252 leading=[Newline "\n", Whitespace "  ", LineComment "// trailing comment owned by the unterminated region", Newline "\n"]
        RBrace "}" @ 253..254 leading=[Newline "\n"]
  Eof "" @ 255..255 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
