crates/jolt_java_syntax/tests/snapshots/corpus__style__declarations__formatter_ignore_leading_blank_line.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class FormatterIgnoreLeadingBlankLine {
  int before = 1;

  // @formatter:off
  int  raw=1;
  // @formatter:on
  int after = 2;
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "FormatterIgnoreLeadingBlankLine" @ 6..37 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 38..39
        ClassBodyMemberList
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 42..45 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "before" @ 46..52 trailing=[Whitespace " "]
                Assign "=" @ 53..54 trailing=[Whitespace " "]
                VariableInitializer
                  LiteralExpression
                    IntegerLiteral "1" @ 55..56
            Semicolon ";" @ 56..57
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 81..84 leading=[Newline "\n", Newline "\n", Whitespace "  ", LineComment "// @formatter:off", Newline "\n", Whitespace "  "] trailing=[Whitespace "  "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "raw" @ 86..89
                Assign "=" @ 89..90
                VariableInitializer
                  LiteralExpression
                    IntegerLiteral "1" @ 90..91
            Semicolon ";" @ 91..92
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 114..117 leading=[Newline "\n", Whitespace "  ", LineComment "// @formatter:on", Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "after" @ 118..123 trailing=[Whitespace " "]
                Assign "=" @ 124..125 trailing=[Whitespace " "]
                VariableInitializer
                  LiteralExpression
                    IntegerLiteral "2" @ 126..127
            Semicolon ";" @ 127..128
        RBrace "}" @ 129..130 leading=[Newline "\n"]
  Eof "" @ 131..131 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
