crates/jolt_java_syntax/tests/snapshots/corpus__style__declarations__formatter_ignore_members.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class Example {
int before=1;
  // @formatter:off
  int raw=1+2;
  String label="x";
  // @formatter:on
int after=2;
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "Example" @ 6..13 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 14..15
        ClassBodyMemberList
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 16..19 leading=[Newline "\n"] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "before" @ 20..26
                Assign "=" @ 26..27
                VariableInitializer
                  LiteralExpression
                    IntegerLiteral "1" @ 27..28
            Semicolon ";" @ 28..29
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 52..55 leading=[Newline "\n", Whitespace "  ", LineComment "// @formatter:off", Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "raw" @ 56..59
                Assign "=" @ 59..60
                VariableInitializer
                  BinaryExpression
                    LiteralExpression
                      IntegerLiteral "1" @ 60..61
                    Plus "+" @ 61..62
                    LiteralExpression
                      IntegerLiteral "2" @ 62..63
            Semicolon ";" @ 63..64
          FieldDeclaration
            ClassType
              ClassTypeSegmentList
                ClassTypeSegmentNode
                  AnnotationList
                  Name
                    Identifier "String" @ 67..73 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "label" @ 74..79
                Assign "=" @ 79..80
                VariableInitializer
                  LiteralExpression
                    StringLiteral "\"x\"" @ 80..83
            Semicolon ";" @ 83..84
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 104..107 leading=[Newline "\n", Whitespace "  ", LineComment "// @formatter:on", Newline "\n"] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "after" @ 108..113
                Assign "=" @ 113..114
                VariableInitializer
                  LiteralExpression
                    IntegerLiteral "2" @ 114..115
            Semicolon ";" @ 115..116
        RBrace "}" @ 117..118 leading=[Newline "\n"]
  Eof "" @ 119..119 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
