crates/jolt_java_syntax/tests/snapshots/corpus__style__declarations__formatter_ignore_nested_member_body.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class Example {
int before=1;
// @formatter:off
int rawField=1+2;
// @formatter:on
int afterField=2;
void run() {
if (true) {
// @formatter:off
int rawLocal=3+4;
call( a,b );
// @formatter:on
int afterLocal=5;
}
}

class CrossingSiblingBoundary {
void first() {
// @formatter:off
int raw=1;
}
void second() {}
// @formatter:on
void after() {}
}

class HeaderMarker { /* @formatter:off */
int stillFormatted=1+2;
// @formatter:on
int after=3;
}
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "Example" @ 6..13 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 14..15
        ClassBodyMemberList
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 16..19 leading=[Newline "\n"] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "before" @ 20..26
                Assign "=" @ 26..27
                VariableInitializer
                  LiteralExpression
                    IntegerLiteral "1" @ 27..28
            Semicolon ";" @ 28..29
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 48..51 leading=[Newline "\n", LineComment "// @formatter:off", Newline "\n"] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "rawField" @ 52..60
                Assign "=" @ 60..61
                VariableInitializer
                  BinaryExpression
                    LiteralExpression
                      IntegerLiteral "1" @ 61..62
                    Plus "+" @ 62..63
                    LiteralExpression
                      IntegerLiteral "2" @ 63..64
            Semicolon ";" @ 64..65
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 83..86 leading=[Newline "\n", LineComment "// @formatter:on", Newline "\n"] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "afterField" @ 87..97
                Assign "=" @ 97..98
                VariableInitializer
                  LiteralExpression
                    IntegerLiteral "2" @ 98..99
            Semicolon ";" @ 99..100
          MethodDeclaration
            VoidType
              VoidKw "void" @ 101..105 leading=[Newline "\n"] trailing=[Whitespace " "]
            Identifier "run" @ 106..109
            LParen "(" @ 109..110
            RParen ")" @ 110..111 trailing=[Whitespace " "]
            Block
              LBrace "{" @ 112..113
              BlockStatementList
                BlockStatement
                  IfStatement
                    IfKw "if" @ 114..116 leading=[Newline "\n"] trailing=[Whitespace " "]
                    LParen "(" @ 117..118
                    LiteralExpression
                      BooleanLiteral "true" @ 118..122
                    RParen ")" @ 122..123 trailing=[Whitespace " "]
                    Block
                      LBrace "{" @ 124..125
                      BlockStatementList
                        BlockStatement
                          LocalVariableDeclaration
                            ParameterModifierList
                            PrimitiveType
                              AnnotationList
                              IntKw "int" @ 144..147 leading=[Newline "\n", LineComment "// @formatter:off", Newline "\n"] trailing=[Whitespace " "]
                            VariableDeclaratorList
                              VariableDeclarator
                                Identifier "rawLocal" @ 148..156
                                Assign "=" @ 156..157
                                VariableInitializer
                                  BinaryExpression
                                    LiteralExpression
                                      IntegerLiteral "3" @ 157..158
                                    Plus "+" @ 158..159
                                    LiteralExpression
                                      IntegerLiteral "4" @ 159..160
                          Semicolon ";" @ 160..161
                        BlockStatement
                          ExpressionStatement
                            MethodInvocationExpression
                              UnqualifiedMethodInvocation
                                NameExpression
                                  Identifier "call" @ 162..166 leading=[Newline "\n"]
                                ArgumentList
                                  LParen "(" @ 166..167 trailing=[Whitespace " "]
                                  ExpressionList
                                    NameExpression
                                      Identifier "a" @ 168..169
                                    Comma "," @ 169..170
                                    NameExpression
                                      Identifier "b" @ 170..171 trailing=[Whitespace " "]
                                  RParen ")" @ 172..173
                            Semicolon ";" @ 173..174
                        BlockStatement
                          LocalVariableDeclaration
                            ParameterModifierList
                            PrimitiveType
                              AnnotationList
                              IntKw "int" @ 192..195 leading=[Newline "\n", LineComment "// @formatter:on", Newline "\n"] trailing=[Whitespace " "]
                            VariableDeclaratorList
                              VariableDeclarator
                                Identifier "afterLocal" @ 196..206
                                Assign "=" @ 206..207
                                VariableInitializer
                                  LiteralExpression
                                    IntegerLiteral "5" @ 207..208
                          Semicolon ";" @ 208..209
                      RBrace "}" @ 210..211 leading=[Newline "\n"]
              RBrace "}" @ 212..213 leading=[Newline "\n"]
          ClassDeclaration
            ClassKw "class" @ 215..220 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
            Identifier "CrossingSiblingBoundary" @ 221..244 trailing=[Whitespace " "]
            ClassBody
              LBrace "{" @ 245..246
              ClassBodyMemberList
                MethodDeclaration
                  VoidType
                    VoidKw "void" @ 247..251 leading=[Newline "\n"] trailing=[Whitespace " "]
                  Identifier "first" @ 252..257
                  LParen "(" @ 257..258
                  RParen ")" @ 258..259 trailing=[Whitespace " "]
                  Block
                    LBrace "{" @ 260..261
                    BlockStatementList
                      BlockStatement
                        LocalVariableDeclaration
                          ParameterModifierList
                          PrimitiveType
                            AnnotationList
                            IntKw "int" @ 280..283 leading=[Newline "\n", LineComment "// @formatter:off", Newline "\n"] trailing=[Whitespace " "]
                          VariableDeclaratorList
                            VariableDeclarator
                              Identifier "raw" @ 284..287
                              Assign "=" @ 287..288
                              VariableInitializer
                                LiteralExpression
                                  IntegerLiteral "1" @ 288..289
                        Semicolon ";" @ 289..290
                    RBrace "}" @ 291..292 leading=[Newline "\n"]
                MethodDeclaration
                  VoidType
                    VoidKw "void" @ 293..297 leading=[Newline "\n"] trailing=[Whitespace " "]
                  Identifier "second" @ 298..304
                  LParen "(" @ 304..305
                  RParen ")" @ 305..306 trailing=[Whitespace " "]
                  Block
                    LBrace "{" @ 307..308
                    BlockStatementList
                    RBrace "}" @ 308..309
                MethodDeclaration
                  VoidType
                    VoidKw "void" @ 327..331 leading=[Newline "\n", LineComment "// @formatter:on", Newline "\n"] trailing=[Whitespace " "]
                  Identifier "after" @ 332..337
                  LParen "(" @ 337..338
                  RParen ")" @ 338..339 trailing=[Whitespace " "]
                  Block
                    LBrace "{" @ 340..341
                    BlockStatementList
                    RBrace "}" @ 341..342
              RBrace "}" @ 343..344 leading=[Newline "\n"]
          ClassDeclaration
            ClassKw "class" @ 346..351 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
            Identifier "HeaderMarker" @ 352..364 trailing=[Whitespace " "]
            ClassBody
              LBrace "{" @ 365..366 trailing=[Whitespace " ", BlockComment "/* @formatter:off */"]
              ClassBodyMemberList
                FieldDeclaration
                  PrimitiveType
                    AnnotationList
                    IntKw "int" @ 388..391 leading=[Newline "\n"] trailing=[Whitespace " "]
                  VariableDeclaratorList
                    VariableDeclarator
                      Identifier "stillFormatted" @ 392..406
                      Assign "=" @ 406..407
                      VariableInitializer
                        BinaryExpression
                          LiteralExpression
                            IntegerLiteral "1" @ 407..408
                          Plus "+" @ 408..409
                          LiteralExpression
                            IntegerLiteral "2" @ 409..410
                  Semicolon ";" @ 410..411
                FieldDeclaration
                  PrimitiveType
                    AnnotationList
                    IntKw "int" @ 429..432 leading=[Newline "\n", LineComment "// @formatter:on", Newline "\n"] trailing=[Whitespace " "]
                  VariableDeclaratorList
                    VariableDeclarator
                      Identifier "after" @ 433..438
                      Assign "=" @ 438..439
                      VariableInitializer
                        LiteralExpression
                          IntegerLiteral "3" @ 439..440
                  Semicolon ";" @ 440..441
              RBrace "}" @ 442..443 leading=[Newline "\n"]
        RBrace "}" @ 444..445 leading=[Newline "\n"]
  Eof "" @ 446..446 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
