crates/jolt_java_syntax/tests/snapshots/corpus__style__declarations__formatter_ignore_trailing_line_comment.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class FormatterIgnoreTrailingLineComment {
  // @formatter:off
  int raw   =1+2; // trailing the last ignored member
  // @formatter:on
  int after = 2;
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "FormatterIgnoreTrailingLineComment" @ 6..40 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 41..42
        ClassBodyMemberList
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 65..68 leading=[Newline "\n", Whitespace "  ", LineComment "// @formatter:off", Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "raw" @ 69..72 trailing=[Whitespace "   "]
                Assign "=" @ 75..76
                VariableInitializer
                  BinaryExpression
                    LiteralExpression
                      IntegerLiteral "1" @ 76..77
                    Plus "+" @ 77..78
                    LiteralExpression
                      IntegerLiteral "2" @ 78..79
            Semicolon ";" @ 79..80 trailing=[Whitespace " ", LineComment "// trailing the last ignored member"]
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 138..141 leading=[Newline "\n", Whitespace "  ", LineComment "// @formatter:on", Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "after" @ 142..147 trailing=[Whitespace " "]
                Assign "=" @ 148..149 trailing=[Whitespace " "]
                VariableInitializer
                  LiteralExpression
                    IntegerLiteral "2" @ 150..151
            Semicolon ";" @ 151..152
        RBrace "}" @ 153..154 leading=[Newline "\n"]
  Eof "" @ 155..155 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
